# criterion-loom

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PUBLIC-SNAPSHOT.md  README.ja.md  README.md  SECURITY.md  SHARED-SNAPSHOT-20260702.md  SUPPORT.md  pyproject.toml
.github/: pull_request_template.md
docs/: README.md  acceptance-review-bundle.md  agent-revision-loop-positioning-2026-06-30.md  ambiguity-confidence-design.md  calibration-report-2026-06-04.md  calibration-report-2026-06-05.md  codex-exec-reviewer-plan.md  comparative-advantage-and-adoption-2026-06-03.ja.md  conflict-audit-2026-06-02.md  conflict-fix-plan-2026-06-02.md  dogfood-readme-2026-06-01.md  expression-precision-audit-handoff-2026-06-30.md  field-corpus-2026-06-04.md  fixture-record-design.md  llm-reviewer.md  logical-audit-consistency-check-2026-06-02.md  logical-audit-design.md  logical-audit-inheritance-audit-2026-06-02.md  logical-audit-integration-plan-2026-06-02.md  logical-audit-second-slice-2026-06-02.md  logical-audit-second-slice-readability-2026-06-02.md  logical-audit-third-rule-bundle-2026-06-02.md  logical-audit-trace-summary-2026-06-02.md  logical-audit-wp3-wp8-acceptance-bundle-2026-06-02.json  logical-audit-wp8-decision-2026-06-02.md  naming.md  public-comparison-2026-06-02.ja.md  public-comparison-2026-06-02.md  public-wording-audit-feature-brief.md  rule-model.md
schemas/: acceptance-review-bundle.schema.json  audit-result.schema.json  candidate-gap-review.schema.json  request-exploration-review.schema.json
tests/: test_acceptance_review.py  (+19 more)
(+132 files in other folders)
