[project]
name = "semantic-guard"
version = "0.1.0"
description = "Meaning-, intent-, and requirements-oriented audit tools for Codex work."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.12.0",
]

[project.scripts]
semantic-guard = "semantic_guard.cli:main"
semantic-guard-mcp = "semantic_guard.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/semantic_guard"]

[tool.hatch.build.targets.wheel.force-include]
"schemas" = "schemas"
"docs/conventions" = "docs/conventions"
"tests/fixtures" = "tests/fixtures"
"skills/semantic-implementation" = "skills/semantic-implementation"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
